packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/keywords/nonexistent/nonexistent-8.ebuild
EAPI=8
DESCRIPTION="ebuild with nonexistent KEYWORDS"
SLOT=0
KEYWORDS="amd64 arm64"
